--- a/index.html
+++ b/index.html
@@ -14,9 +14,93 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="float-grid.css">
 
 </head>
+
 <body>
+
+<header>
+	<div class="row">
+	<h1>Star Wars characters</h1>
+	<h2>Incomplete list</h2>
+	</div>
+</header>
+
+<main>
+	<div class="row">
+		<div class="col_4">
+			<div class="card">
+				<img src="images/rey_square.png" class="cardpict" alt="Rey">
+				<section>
+					<h3>
+						Rey
+					</h3>
+				Protagonist, from Tatooine
+				</section>
+			</div>
+		</div>
+		<div class="col_4">
+			<div class="card">
+				<img src="images/finn_square.png" class="cardpict" alt="Finn">
+				<section>
+					<h3>
+						Finn
+					</h3>
+				Stormtrooper friendzoned by Rey
+				</section>
+			</div>
+		</div>
+		<div class="col_4">
+			<div class="card">
+				<img src="images/kylo_square.png" class="cardpict" alt="Kylo">
+				<section>
+					<h3>
+						Kylo
+					</h3>
+				Evil man
+				</section>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col_4">
+			<div class="card">
+				<img src="images/poe_square.png" class="cardpict" alt="Poe">
+				<section>
+					<h3>
+						Poe
+					</h3>
+				Over-confident pilot
+				</section>
+			</div>
+		</div>
+		<div class="col_4">
+			<div class="card">
+				<img src="images/chewbacca_square.png" class="cardpict" alt="Chewie">
+				<section>
+				<h3>
+					Chewbacca
+				</h3>
+				Hairy man who can't talk
+				</section>
+			</div>
+		</div>
+		<div class="col_4">
+			<div class="card">
+				<img src="images/yoda_square.png" class="cardpict" alt="Yoda">
+				<section>
+				<h3>
+					Yoda
+				</h3>
+				Very old dyslexic ET
+				</section>
+			</div>
+		</div>
+	</div>
+</main>
 
 </body>
 </html>
