--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<h3>
 						Finn
 					</h3>
-				Stormtrooper friendzoned by Rey
+				Stormtrooper friend of Rey
 				</section>
 			</div>
 		</div>
